# oceanarray

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  actions_overview.html  build_docs.html  citation_guide.html  clock_offset.html  customisation_checklist.html  data_format_specification.html  demo-output.html  demo-output.ipynb  demo_instrument-output.html  demo_instrument-output.ipynb  demo_mooring-output.html  demo_mooring-output.ipynb  environment.yml  faq.html  genindex.html  gitcollab.html  github_intro.html  gitorg_transfer.html  gitworkflow_solo.html  index.html  legacy.html  local_install.sh  objects.inv  oceanSITES_manual.html  oceanarray.html  oceanarray_format.html  precommit_guide.html  processing_framework.html  project_structure.html  py-modindex.html  pypi_guide.html  pyproject.toml  requirements-dev.txt  (+8 more)
.github/workflows/: docs.yml  docs_deploy.yml  pypi.yml  tests.yml
_modules/: index.html
_modules/oceanarray/: convertOS.html  plotters.html  readers.html  stage1.html  stage2.html  time_gridding.html  tools.html  utilities.html  writers.html
_modules/template_project/: plotters.html  readers.html  tools.html  utilities.html  writers.html
_sources/: actions_overview.md.txt  build_docs.md.txt  data_format_specification.rst.txt  demo-output.ipynb.txt  demo_instrument-output.ipynb.txt  demo_mooring-output.ipynb.txt  faq.md.txt  github_intro.md.txt  gitorg_transfer.md.txt  index.rst.txt  oceanSITES_manual.rst.txt  processing_framework.rst.txt  project_structure.md.txt  roadmap.rst.txt  style_guide.md.txt  writing_tests.md.txt
_sources/methods/: acquisition.rst.txt  calibration.rst.txt  filtering.rst.txt  multisite_merging.rst.txt  standardisation.rst.txt  time_gridding.rst.txt  trimming_old.rst.txt
_static/code/: hydro_grid.m  microcat2rodb_3.m  microcat_apply_cal.m  microcat_apply_cal_plus.m  mooring_interp_wb2_3_5.m
data/: 6123_data.cnv  OS_wb1_12_2015_6123_P.nc  OS_wb2_9_201114_3216_P.nc  OS_wb2_9_201114_3220_P.nc  OS_wb2_9_201114_3247_P.nc  OS_wb2_9_201114_3900_P.nc  OS_wb2_9_201114_3901_P.nc  OS_wb2_9_201114_3903_P.nc  OS_wb2_9_201114_3904_P.nc  OS_wb2_9_201114_3910_P.nc  OS_wb2_9_201114_3916_P.nc  OS_wb2_9_201114_4066_P.nc  OS_wb2_9_201114_4461_P.nc  OS_wb2_9_201114_4619_P.nc  OS_wb2_9_201114_5242_P.nc  OS_wb2_9_201114_5765_P.nc  OS_wb2_9_201114_6798_P.nc  OS_wb2_9_201114_6823_P.nc  OS_wb2_9_201114_6839_P.nc  climatology_WB2.nc  test_data.cnv  test_data_raw.nc  test_mooring.yaml  wb1_12_2015_005.microcat  wb1_12_2015_005.microcat.txt  wb1_12_2015_6123.raw  wb1_12_2015_6123.use  wb1_12_2015_6123_head10.use  wb2_9_201114_3216.use  wb2_9_201114_3220.use  wb2_9_201114_3247.use  wb2_9_201114_3900.use  wb2_9_201114_3901.use  wb2_9_201114_3903.use  wb2_9_201114_3904.use  wb2_9_201114_3910.use  wb2_9_201114_3916.use  wb2_9_201114_4066.use  wb2_9_201114_4461.use  wb2_9_201114_4619.use  (+5 more)
docs/source/: citation_guide.md  clock_offset.rst  conf.py  customisation_checklist.md  gitcollab.md  gitworkflow_solo.md  index.rst  legacy.rst  oceanarray.rst  oceanarray_format.rst  precommit_guide.md  processing_framework.rst  project_structure.md  pypi_guide.md  roadmap.rst  setup.md  style_guide.md  template_project.rst
methods/: acquisition.html  auto_qc.html  calibration.html  concatenation.html  conversion.html  filtering.html  gridding.html  multisite_merging.html  standardisation.html  standardisation_old.html  stitching.html  time_gridding.html  trimming.html  trimming_old.html  vertical_gridding.html
notebooks/: demo-mooring.ipynb  demo.ipynb  demo_batch_instrument.ipynb  demo_check_clock.ipynb  demo_climatology.ipynb  demo_clock_offset.ipynb  demo_instrument.ipynb  demo_instrument_rdb.ipynb  demo_mooring.ipynb  demo_mooring_rdb.ipynb  demo_stage1.ipynb  demo_stage2.ipynb  demo_stage3.ipynb  demo_step1.ipynb
notebooks/legacy/: README.md  demo_batch_instrument.ipynb  demo_instrument_rdb.ipynb  demo_mooring_rdb.ipynb
oceanarray/: clock_offset.py  convertOS.py  find_deployment.py  generate_test_data.py  instrument.py  logger.py  mooring.py  mooring_rodb.py  oceanarray.mplstyle  plotters.py  process_rodb.py  rapid_interp.py  read_rapid.py  readers.py  rodb.py  stage1.py  stage2.py  stage3.py  time_gridding.py  tools.py  utilities.py  writers.py
oceanarray/calibration/: microcat.py
template_project/: readers.py  template_project.mplstyle  tools.py  utilities.py
tests/: test_calibration.py  test_convertOS.py  test_instrument.py  test_logger.py  test_mooring.py  test_mooring_rodb.py  test_plotters.py  test_process_rodb.py  test_readers.py  test_rodb.py  test_stage1.py  test_stage2.py  test_stage3.py  test_time_gridding.py  test_tools.py  test_utilities.py  test_writers.py
(+40 files in other folders)
