[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm[toml]>=3.4",
  "wheel",
]

[project]
name = "oceanarray"
description = "Example template project for docs, pip install and git"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Eleanor Frajka-Williams", email = "eleanorfrajka@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "dependencies",
  "version",
]
urls.documentation = "https://github.com/ocean-uhh/oceanarray"
urls.homepage = "https://github.com/ocean-uhh/oceanarray"
urls.repository = "https://github.com/ocean-uhh/oceanarray"


[tool.setuptools.packages.find]
where = ["."]
include = ["oceanarray"]

[tool.setuptools.dynamic]
dependencies = { file = [
  "requirements.txt",
] }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools_scm]
write_to = "oceanarray/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.check-manifest]
ignore = [
  "docs",
  "docs/*",
  "notebooks",
  "notebooks/*",
  "tests",
  "tests/*",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
# …any other top‑level settings you use (extend, cache-dir, line-length, exclude, etc.)…

[tool.ruff.lint]
select = [
  "D",       # pydocstyle
  "E",       # pycodestyle errors
  "F",       # pyflakes errors
  "W",       # pycodestyle warnings
  "C90",     # mccabe complexity
  "ANN",     # type annotations
  "B",       # flake8-bugbear
  "BLE",     # bleach checks
  "TRY",     # tryceratops
  "ARG",     # flake8-arguments
  "SLF",     # flake8-self
]
ignore = [
  "D107",    # missing docstring in __init__
  "D203",    # 1 blank line required before class docstring
  "D213",    # multi-line summary docstring style
  "D401",    # first line should be in imperative mood
  "E501",    # line‑length
  "PLR0913", # too many arguments
  "C901",    # complexity
]
